fix dark mode and added index page

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,32 +1,122 @@
-html, body, h1, h2, h3, p {
-    font-family: "Open Sans";
+html,
+body,
+h1,
+h2,
+h3,
+p {
+  font-family: "Inter", sans-serif;
+}
 
-  }
+h2 {
+  font-weight: 700;
+  font-size: 1.2rem;
+}
 
-  .dark {
-    background-color: #111827;
-  }
-  
-  .dark p, 
-  .dark h1, 
-  .dark h2,
-  .dark h3,
-  .dark span,
-  .dark label {
-    color:white;
-  }
-
-  
-  body.light {
-    --primary: white;
-    --text-main: #111827;
-  }
+h3 {
+  font-weight: 600;
+  font-size: 1rem;
+}
 
 
-  .dark .project {
-    background-color: rgb(45 212 191);
-  }
+.dark {
+  background-color: #111827;
+}
 
-  /* .dark .project .title {
-    background:#FFF;
-  } */
+.dark p,
+.dark h1,
+.dark h2,
+.dark h3,
+.dark span,
+.dark label {
+  color: white;
+}
+
+
+body.light {
+  --primary: white;
+  --text-main: #111827;
+}
+
+
+.dark .project {
+  background-color: rgb(45 212 191);
+}
+
+.moonToggle {
+  cursor: pointer;
+}
+
+.darkToggle input {
+  /* display: none; */
+  visibility: hidden;
+}
+
+.mainTitle {
+  font-weight: 900;
+  font-size: 2.5rem;
+}
+
+.highlight {
+  white-space: nowrap;
+  background: linear-gradient(180deg, hsla(0, 0%, 100%, 0) 50%, #b2f5ea 0);
+}
+
+.skills .htmlbar {
+  width: 90%;
+}
+
+.skills .cssbar {
+  width: 80%;
+}
+
+.skills .javascriptbar {
+  width: 70%;
+}
+
+.skills .phpbar {
+  width: 90%;
+}
+
+.skills .pythonbar {
+  width: 80%;
+}
+
+.skills .nodebar {
+  width: 50%;
+}
+
+.skills .mongobar {
+  width: 60%;
+}
+
+.skills .mysqlbar {
+  width: 90%;
+}
+
+.skills .sqlitebar {
+  width: 80%;
+}
+
+.skills .iosbar {
+  width: 70%;
+}
+
+.skills .androidbar {
+  width: 80%;
+}
+
+.skills .reactbar {
+  width: 60%;
+}
+
+.skills .rbar {
+  width: 70%;
+}
+
+.skills .sasbar {
+  width: 60%;
+}
+
+.skills .tableaubar {
+  width: 40%;
+}
